# virtual-vehicle

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  main.cpp
cmake/: Dependencies.cmake  FindOsmium.cmake  FindProtozero.cmake
config/: default.json  example.json
documentation/: vvu_state_graph.drawio
include/bringauto/common_utils/: CommonUtils.hpp  EnumUtils.hpp  Timer.hpp
include/bringauto/communication/: Command.hpp  ICommunication.hpp  Modbus.hpp  ProtoBuffer.hpp  Status.hpp  TerminalOutput.hpp
include/bringauto/communication/fleet_protocol/: FleetProtocol.hpp  Message.hpp
include/bringauto/communication/terminal/: TerminalOutput.hpp
include/bringauto/logging/: Logger.hpp
include/bringauto/osm/: OsmObject.hpp  OsmStructures.hpp  OsmiumHandler.hpp  Point.hpp  Route.hpp  Way.hpp
include/bringauto/settings/: Constants.hpp  LoggerId.hpp  Settings.hpp  SettingsParser.hpp  StateSmurfDefinition.hpp
include/bringauto/virtual_vehicle/: GlobalContext.hpp  Map.hpp  Vehicle.hpp
include/bringauto/virtual_vehicle/gps_provider/: IGpsProvider.hpp  MapGps.hpp  Rutx09.hpp  UBlocks.hpp
include/bringauto/virtual_vehicle/vehicle_provider/: GpsVehicle.hpp  IVirtualVehicle.hpp  SimVehicle.hpp
lib/proto/: CarStateProtocol.pb.cc  CarStateProtocol.pb.h  MissionModule.pb.cc
proto/: BringAutoDaemon.proto
resources/config/: default.json  example.json
resources/maps/: BorsodChem.osm  London.osm  Prague.osm  faulhorn_borsodchem.osm  konsberg.osm
resources/systemd/: virtual-vehicle-utility.service  virtual-vehicle-utility.service.in
source/bringauto/common_utils/: CommonUtils.cpp  EnumUtils.cpp
source/bringauto/communication/: Command.cpp  ICommunication.cpp  ProtoBuffer.cpp  Status.cpp  TerminalOutput.cpp
source/bringauto/communication/fleet_protocol/: FleetProtocol.cpp  Message.cpp
source/bringauto/communication/terminal/: TerminalOutput.cpp
source/bringauto/osm/: OsmObject.cpp  OsmiumHandler.cpp  Point.cpp  Route.cpp  Way.cpp
source/bringauto/settings/: SettingsParser.cpp  StateSmurfDefinition.cpp
source/bringauto/virtual_vehicle/: Map.cpp  Vehicle.cpp
source/bringauto/virtual_vehicle/gps_provider/: MapGps.cpp  Rutx09.cpp  UBlocks.cpp
source/bringauto/virtual_vehicle/vehicle_provider/: GpsVehicle.cpp  IVirtualVehicle.cpp  SimVehicle.cpp
src/bringauto/communication/: ProtoBuffer.cpp  TerminalOutput.cpp
src/bringauto/logging/: Logger.cpp
src/bringauto/osm/: OsmObject.cpp  OsmStructures.cpp  OsmiumHandler.cpp  Point.cpp  Way.cpp
src/bringauto/virtual_vehicle/: Map.cpp  Vehicle.cpp
test/: CMakeLists.txt  README.md  mainTests.cpp
test/include/: ConfigMock.hpp  MapTest.hpp  OsmiumTest.hpp  SettingsParserTest.hpp
test/maps/: BorsodChem.osm  Brno.osm  London.osm  virtual_vehicle_map.osm
test/smurf/: .gitignore  README.md  default_config.json
test/smurf/circularRouteScenario/: .env  scenarios.json
test/smurf/duplicitStopScenario/: .env  scenarios.json
test/smurf/etnaDefaultScenario/: .env  scenarios.json
test/smurf/linearRouteScenario/: .env  scenarios.json
test/smurf/maps/: 1.osm  2.osm  lap_for_gps.osm  linear.osm  route_change.osm
test/smurf/routeChangeScenario/: .env  scenarios.json
test/source/: EnumUtilsTest.cpp  MapTest.cpp  OsmiumTest.cpp  SettingsParserTest.cpp
tests/: CMakeLists.txt  README.md
tests/include/: osmiumTest.h
tests/maps/: BorsodChem.osm  luzanky.osm
tests/src/: MapTest.cpp  OsmiumTest.cpp  osmiumTest.cpp
virtual_fleet/: README.md  VirtualFleet.py  VirtualFleetDocker.py  virtual_fleet.json  virtual_fleet_docker.json  virtual_vehicle_map.osm
virtual_fleet/systemd/: badaemon.service  bavirtualvehicle.service  virtualfleet.service
